# opendal-util

./: .editorconfig  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: analysis-scorecard.yaml  ci-nix.yaml  ci.yaml
.zed/: settings.json
src/: copy.rs  copy2.rs  factory.rs  glob.rs  lib.rs  list.rs  location.rs  restate.rs
