[package]
name = "opendal-util"
edition = "2024"
version = "0.2.1"
description = "Utilities for OpenDAL"
license = "MIT"
repository = "https://github.com/sagikazarmark/opendal-util"
homepage = "https://github.com/sagikazarmark/opendal-util"

[dependencies]
content_disposition = "0.4.0"
futures = "0.3.31"
opendal = { version = "0.55", features = [ "services-memory" ] }
restate-sdk = { version = "0.7", optional = true }
schemars = { version = "1.1", features = ["url2"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typed-path = "0.12.0"
url = { version = "2.5", features = ["serde"] }

[features]
default = []
restate = ["dep:restate-sdk", "serde", "schemars"]
serde = ["dep:serde"]
schemars = ["serde", "dep:schemars"]

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
