[package]
name = "opendal-util"
edition = "2024"
version = "0.5.0"
description = "Utilities for OpenDAL"
license = "MIT"
repository = "https://github.com/sagikazarmark/opendal-util"
homepage = "https://github.com/sagikazarmark/opendal-util"

[dependencies]
content_disposition = "0.4.0"
futures = "0.3.31"
globset = "0.4.18"
opendal = { version = "0.55", features = [ "services-memory" ] }
restate-sdk = { version = "0.7", optional = true }
schemars = { version = "1.2", features = ["url2"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typed-path = "0.12.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
restate = ["dep:restate-sdk", "serde", "schemars"]
serde = ["dep:serde"]
schemars = ["serde", "dep:schemars"]

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
