[package]
name = "opendal-util"
version = "0.7.0"
description = "Utilities for OpenDAL"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sagikazarmark/opendal-util"
homepage = "https://github.com/sagikazarmark/opendal-util"

[dependencies]
content_disposition = "0.4"
futures = "0.3"
globset = "0.4"
opendal = { version = "0.57", features = [ "services-memory" ] }
restate-sdk = { version = "0.11", default-features = false, features = ["hyper"], optional = true }
schemars = { version = "1.2", features = ["url2"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typed-path = "0.12"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
restate = ["dep:restate-sdk", "serde", "schemars"]
serde = ["dep:serde"]
schemars = ["serde", "dep:schemars"]

[package.metadata.release]
sign-commit = true
sign-tag = true
shared-version = true
tag-message = "Release {{version}}"
tag-name = "v{{version}}"
